--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ mainClassName="su.executable.Main"
 
 dependencies {
     compile group: 'org.postgresql', name: 'postgresql', version: '42.2.2'
+    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.3.0.Beta1+'
 }
 
 
